syntax = "proto3";

package item;

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message ItemData {
    int64 id = 1;
    string location = 2;
    int32 itemType = 3;
    int32 quantity = 4;
    google.protobuf.Timestamp expiresAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
    google.protobuf.Timestamp createdAt = 7;
}